added full examples

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 
 <body>
 
+<h3>Hypertransformations</h3>
+<img src="http://dam.org/mix/molnar-hypertransformation-gro--dam-11152-sCl4i-de-4.jpg">
 <ul>
-  <li><a href="0001">0001</a></li>
+  <li><a href="0001">glitch1</a></li>
+  <li><a href="0002">glitch2</a></li>
+  <li><a href="0003">glitch3</a></li>
+  <li><a href="0004">accurate</a></li>
 </ul>
 
 </body>
